--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -7,6 +7,18 @@
     text-align: center;
   
 }
+@media screen and (max-width: 600px) {
+    .head{
+
+
+            font-size: larger;
+            width:90%;
+            margin:auto;
+            margin-top: 20vh;
+            text-align: center;
+           
+    }
+  }
 .red{
     color:red;
 }
