udated css for mobile phones

--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -15,6 +15,7 @@
             width:90%;
             margin:auto;
             margin-top: 20vh;
+            margin-bottom: 10vh;
             text-align: center;
            
     }
