--- a/src/components/footer.module.css
+++ b/src/components/footer.module.css
@@ -8,6 +8,19 @@
   
   
 }
+@media screen and (max-width: 600px) {
+    .foot{
+
+        font-size: larger;
+       
+        width:80%;
+        margin:auto;
+         margin-top:10vh;
+        text-align: center;
+            
+           
+    }
+  }
 .icon{
     font-size: x-large;
     
